fdo#44314 non-standard hyphenation at soft hyphens + with pers. dic.

Change-Id: I25e7c13036c6ce1948cc33d45901ef69a258fb03